--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+.row:nth-of-type(2) {
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+}
+.box:nth-of-type(2) {
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
