--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     flex-direction: column;
     justify-content: center;
 }
-.row:nth-of-type(2) {
+.row:nth-of-type(3) {
     border-bottom: 2px solid black;
     border-top: 2px solid black;
 }
@@ -33,4 +33,15 @@ body {
     background-color: black;
     border-radius: 5px;
     margin-top: 10%;
+}
+.winMessage {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    margin-top: 10%;
+}
+.title {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 10%;
 }
